# antenna-test-plugins

./: .gitignore  CMakeLists.txt  PLUGIN_DEVELOPMENT.md  PLUGIN_TESTING.md  README.md  build_plugins.sh  iplugininterface.cpp  iplugininterface.h  test_plugin.cpp  test_plugins.sh
positioner/dummy/: CMakeLists.txt  dummy.json  dummypositioner.cpp  dummypositioner.h
signalanalyzer/dummy/: CMakeLists.txt  dummy.json  dummysignalanalyzer.cpp  dummysignalanalyzer.h
signalgenerator/dummy/: CMakeLists.txt  dummy.json  dummysignalgenerator.cpp  dummysignalgenerator.h
signalgenerator/signalcore_sc5511a/: CMakeLists.txt  signalcore_sc5511a.cpp  signalcore_sc5511a.h  signalcore_sc5511a.json
signalgenerator/signalcore_sc5511a/include/: sc5511a.h  stdafx.h
signalgenerator/signalcore_sc5511a/x64/: sc5511a.exp  sc5511a.lib
signalgenerator/signalcore_sc5511a/x86/: sc5511a.exp  sc5511a.lib
